without runtime warnings.  See "Deprecation" in the manual.

In particular, the following functions, which were deprecated in 2.0.10
but not specifically mentioned earlier in this file, have been removed:

*** `uniform-vector-read!' and `uniform-vector-write' have been
    removed. Use `get-bytevector-n!' and `put-bytevector' from (rnrs io
    ports) instead.

** Remove miscellaneous unused interfaces

We have removed accidentally public, undocumented interfaces that we
think are not used, and not useful.  This includes `scm_markstream',
`SCM_FLUSH_REGISTER_WINDOWS', `SCM_THREAD_SWITCHING_CODE', `SCM_FENCE',
`scm_call_generic_0', `scm_call_generic_1', `scm_call_generic_2'
`scm_call_generic_3', `scm_apply_generic', and `scm_program_source'.
`scm_async_click' was renamed to `scm_async_tick', and `SCM_ASYNC_TICK'
was made private (use `SCM_TICK' instead).

** Many internal compiler / VM changes

As the compiler and virtual machine were re-written, there are many
changes in the back-end of Guile to interfaces that were introduced in
Guile 2.0.  These changes are only only of interest if you wrote a
language on Guile 2.0 or a tool using Guile 2.0 internals.  If this is
the case, drop by the IRC channel to discuss the changes.

** Defining a SMOB or port type no longer mucks exports of `(oop goops)'

It used to be that defining a SMOB or port type added an export to
GOOPS, for the wrapper class of the smob type.  This violated
modularity, though, so we have removed this behavior.

** Bytecode replaces objcode as a target language

One way in which people may have used details of Guile's runtime in
Guile 2.0 is in compiling code to thunks for later invocation.  Instead
of compiling to objcode and then calling `make-program', now the way to
do it is to compile to `bytecode' and then call `load-thunk-from-memory'
from `(system vm loader)'.

** Weak pairs removed

Weak pairs were not safe to access with `car' and `cdr', and so were
removed.

** Weak alist vectors removed
